# OpenGL_cmake

./: .gitignore  CMakeLists.txt  README.md  main.cpp
headers/: Cubes.h  EngineOGL.h  Light.h  Spheres.h  camera.h  shader_handler.h
includes/: camera.h  shader_handler.h
shaders/: fragment.glsl  light_cube_fragment.glsl  vertex.glsl
src/: Cubes.cpp  EngineOGL.cpp  Light.cpp  Spheres.cpp  main.cpp
